--- a/Lecture_1_Random_Solver_solution.ipynb
+++ b/Lecture_1_Random_Solver_solution.ipynb
@@ -301,27 +301,24 @@
     "\n",
     "        # store metadata set information \n",
     "\n",
-    "        # TODO\n",
     "        # here we expect the name of the problem\n",
-    "        self.name = ...\n",
+    "        self.name = self.lines[0].split(' ')[1]\n",
     "        \n",
-    "        # TODO\n",
+    "\n",
     "        # here we expect the number of points in the considered instance\n",
-    "        self.nPoints =  ...\n",
+    "        self.nPoints =  int(self.lines[3].split(' ')[1])\n",
     "        \n",
-    "        # TODO\n",
     "        # here the length of the best solution\n",
-    "        self.best_sol = ...\n",
+    "        self.best_sol = float(self.lines[5].split(' ')[1])\n",
     "        \n",
     "        \n",
     "        # read all data points and store them \n",
     "        self.points = np.zeros((self.nPoints, 3)) # this is the structure where we will store the pts data \n",
-    "        # TODO\n",
     "        for i in range(self.nPoints):\n",
-    "            ...\n",
-    "            self.points[i, 0] = ...\n",
-    "            self.points[i, 1] = ...\n",
-    "            self.points[i, 2] = ...\n",
+    "            line_i = self.lines[7 + i].split(' ')\n",
+    "            self.points[i, 0] = int(line_i[0])\n",
+    "            self.points[i, 1] = float(line_i[1])\n",
+    "            self.points[i, 2] = float(line_i[2])\n",
     "\n",
     "        # create distance matrix bx calling create_dist_matrix\n",
     "        self.create_dist_matrix()\n",
@@ -342,10 +339,10 @@
     "\n",
     "            # initialize an array with 0s using np.zeros\n",
     "            self.optimal_tour = np.zeros(self.nPoints, dtype=int)\n",
-    "            # read the points from the file and fill the array optimal_tour\n",
-    "            # TODO\n",
+    "            # read the points from the file and fill the array\n",
     "            for i in range(self.nPoints):\n",
-    "                ...\n",
+    "                line_i = lines[5 + i].split(' ')\n",
+    "                self.optimal_tour[i] = int(line_i[0]) - 1\n",
     "\n",
     "    # for display purposes\n",
     "    def print_info(self):\n",
@@ -379,13 +376,13 @@
     "        self.dist_matrix = np.zeros((self.nPoints, self.nPoints))\n",
     "\n",
     "        # loop over all the pints and compute the euclidean distance between every pair of points with index i and j\n",
-    "        # TODO\n",
     "        for i in range(self.nPoints):\n",
-    "            ...\n",
+    "            for j in range(i, self.nPoints):\n",
+    "                self.dist_matrix[i, j] = distance_euc(self.points[i][1:3], self.points[j][1:3])\n",
     "\n",
     "        # transpose of the matrix and fill missing other 0s\n",
     "        # this was made to reduce the complexity  \n",
-    "        ..."
+    "        self.dist_matrix += self.dist_matrix.T"
    ]
   },
   {
@@ -527,7 +524,8 @@
     "#The result is an array containing a random permutation of integers from 0 to instance_.nPoints - 1.\n",
     "\n",
     "def random_method(instance_): # TODO\n",
-    "    ...\n",
+    "    return np.random.choice(np.arange(instance_.nPoints), size=instance_.nPoints,\n",
+    "                            replace=False)\n",
     "\n",
     "print(random_method(p_inst))"
    ]
@@ -646,10 +644,10 @@
     "            return total_length\n",
     "\n",
     "    # compute (solution - best solution)/best solution in %\n",
-    "    # TODO\n",
     "    def _gap(self):\n",
     "        self.evaluate_solution(return_value=False)\n",
-    "        self.gap = ...\n"
+    "        self.gap = np.round(\n",
+    "            ((self.found_length - self.problem_instance.best_sol) / self.problem_instance.best_sol) * 100, 2)\n"
    ]
   },
   {
