--- a/Lecture_4_SA_ILS_solution.ipynb
+++ b/Lecture_4_SA_ILS_solution.ipynb
@@ -41,7 +41,7 @@
         "\n",
         "from utils import compute_length, ProblemInstance, SolverTSP\n",
         "\n",
-        "# simulated annealing\n",
+        "\n",
         "def sa(solution, instance, constant_temperature=0.95, iterations_for_each_temp=100):\n",
         "    # initial setup\n",
         "    # initialize the temperature T = tmax\n",
@@ -49,7 +49,7 @@
         "\n",
         "    # initializing initial solution and len (x)\n",
         "    current_sol = np.array(solution)\n",
-        "    # initial energey of x, E(x), enery is the tour lenght\n",
+        "    # initial energey of x, E(x), energy is the tour lenght\n",
         "    current_len = compute_length(solution, instance.dist_matrix)\n",
         "\n",
         "    # variables to save the best sol\n",
@@ -58,7 +58,25 @@
         "    # main loop\n",
         "    while temperature > 0.001: # lowest accepted temeperature, T > Tmin and E > Eth\n",
         "        # TODO\n",
-        "        \n",
+        "        # equilibrium for the current temperature, or specify max iteration for each temperature\n",
+        "        for it in range(iterations_for_each_temp):\n",
+        "            # generate new candidate solution from neighbors\n",
+        "            next_sol, delta_E = random_sol_from_neigh(current_sol, instance)\n",
+        "            # if neighbor solution is an improvment: accept it and save it in current and best solution variables\n",
+        "            if delta_E < 0:\n",
+        "                current_sol = next_sol\n",
+        "                current_len += delta_E\n",
+        "                if current_len < best_len:\n",
+        "                    best_sol = current_sol\n",
+        "                    best_len = current_len\n",
+        "            else: # neighbor solution is not an improvment: compute exp(-deltaE/E) and generate a random number r in range [0, 1] and ecide if accept it or not\n",
+        "                r = np.random.uniform(0, 1)\n",
+        "                if r < np.exp(- delta_E / temperature):\n",
+        "                    current_sol = next_sol\n",
+        "                    current_len += delta_E\n",
+        "\n",
+        "        # decrease temperature\n",
+        "        temperature *= constant_temperature\n",
         "    # END TODO\n",
         "    # return best tour solution\n",
         "    return best_sol.tolist()\n",
@@ -208,19 +226,27 @@
         "    # main loop\n",
         "    while temperature > 0.001:\n",
         "        for it in range(iterations_for_each_temp):\n",
-        "            # TODO\n",
-        "            # perturbation\n",
-        "            next_sol_p, new_cost_p = ...\n",
+        "            # perturbation with Double Bridge\n",
+        "            next_sol_p, new_cost_p = DoubleBridge.perturbate_solution(current_sol,\n",
+        "                                                                      current_len,\n",
+        "                                                                      instance.dist_matrix)\n",
+        "            # print(new_cost_p)\n",
         "            # local search\n",
-        "            next_sol, new_cost = ...\n",
-        "            # END TODO\n",
+        "            next_sol, new_cost = local_search(next_sol_p, new_cost_p, instance)\n",
+        "            # print(new_cost, current_len)\n",
+        "            # print()\n",
+        "            # break\n",
         "            # acceptance criterions\n",
         "            if new_cost - current_len < 0:\n",
+        "                # print('updated sol')\n",
         "                current_sol = next_sol\n",
         "                current_len = new_cost\n",
         "                if current_len < best_len:\n",
+        "                    # print(\"update best\")\n",
         "                    best_sol = current_sol\n",
         "                    best_len = current_len\n",
+        "                    # print(best_len)\n",
+        "                # print()\n",
         "            else:\n",
         "                r = np.random.uniform(0, 1)\n",
         "                if r < np.exp(- (new_cost - current_len) / temperature):\n",
